tests/paczka1/small_fuzzy/27678793.err
Error in line 10: S143 S929 14,2
Error in line 13: 8HYBeI7Vm A863 21,1
